--- a/style.css
+++ b/style.css
@@ -2,8 +2,13 @@ body {
 	font-family: sans-serif;
 }
 
+#container {
+	max-width: 100%;
+}
+
 #navigation {
 	background: #FFB4B0;
+	padding: 0;
 }
 
 #navigation ul li {
@@ -15,29 +20,45 @@ body {
 	background: #4DD7FA;
 	width: 10%;
 	float: left;
+	padding: 1em;
+}
+
+.overflow {
+	overflow: hidden;
 }
 
 #genre-title {
 	margin-bottom: .5em;
 }
 
+.submit {
+	font-size: 2em;
+	margin: .5em 0 0;
+}
+
 #results {
 	background: #FEFAC0;
 	float: left;
 	width: 80%;
+	padding: 1em;
 }
 
 .song-name {
 	font-size: 2em;
 	color: #785616;
+	margin: 0 0 .25em;
 }
 
 .bordered {
 	border: .125em solid black;
 	margin: .5em;
-	padding: 1em;
 }
 
 .displayblock {
 	display: block;
+	width: 100%;
+}
+
+.results-line {
+	margin-bottom: 2em;
 }
