--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ nav ul li {
 	visibility: hidden;
 }
 
+.display-none {
+	display: none;
+}
+
 #songs-and-options {
 	/*flex: 1 100%;*/
 	width: 400px;
