--- a/style.css
+++ b/style.css
@@ -60,14 +60,15 @@ nav ul li a {
 	display: none;
 }
 
-#songs-and-options {
-	/*flex: 1 100%;*/
+/*#songs-and-options {
+	flex: 1 100%;
 	width: 400px;
-} 
+} */
 
 #song-options-div {
 	/*flex-grow: 1;*/
-	width: 300px;
+	/*width: 300px;*/
+	/*margin: auto;*/
 	float: left;
 	padding: 1em;
 	background: whitesmoke;
@@ -77,7 +78,7 @@ nav ul li a {
 	padding: 1em;
 	background: #F0F0F0;
 	width: 300px;
-	margin: 2.5em auto 0;
+	margin: 0 auto;
 }
 
 #error-message {
@@ -121,7 +122,8 @@ nav ul li a {
 	/*flex-grow: 2;*/
 	/*width: 600px;*/
 	padding: 1em;
-	float: right;
+	float: left;
+	margin-left: 1em;
 	/*float: left;
 	padding: 1%;
 	width: 60%;*/
@@ -208,4 +210,19 @@ button {
 
 .center {
 	margin: auto;
+}
+
+@media screen and (max-width: 960px) {
+	#results {
+		margin: 1em 0 0 0;
+		clear: both;
+	}
+
+	#song-options-div {
+		padding: 1em 4em;
+	}
+
+	nav ul {
+		margin: .5em auto;
+	}
 }
