--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ body {
 	margin: 0;
 }
 
-#flex-container {
+/*#flex-container {
 	margin-top: 3%;
-}
+}*/
 
 #navigation {
 	position: fixed;
@@ -36,10 +36,19 @@ nav {
 	width: 100%;
 }
 
+nav ul {
+	/*margin: 0;*/
+	padding: 0 1em 0 1em;
+}
+
 nav ul li {
 	list-style-type: none;
 	display: inline;
 	color: white;
+	/*margin-right: .25em;*/
+}
+
+nav ul li:not(:last-child) {
 	margin-right: .25em;
 }
 
@@ -212,13 +221,19 @@ button {
 	margin: auto;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 750px), screen and (max-device-width: 700px) {
 	#song-options-div {
 		/*padding: 1em 4em;*/
 		/*width: 100%;*/
 		box-sizing: border-box;
 		margin: 0 1em;
 		float: none;
+		font-size: 3em;
+	}
+
+	#song-options-div input[type=checkbox] {
+		transform: scale(3, 3);
+		margin-right: 2em;
 	}
 
 	#results {
@@ -229,6 +244,15 @@ button {
 	}
 
 	nav ul {
+		text-align: center;
 		margin: .5em auto;
+		font-size: 3em;
+		padding: 0;
+	}
+
+	#add-music {
+		font-size: 3em;
+		width: auto;
+		margin: 0 1em;
 	}
 }
