--- a/styles/style.css
+++ b/styles/style.css
@@ -20,21 +20,22 @@ body {
 	margin-top: 3%;
 }*/
 
-#navigation {
+/*#navigation {
 	position: fixed;
 	top: 0;
 	left: 0;
-	/*width: 61.25em;*/
-}
+}*/
 
 nav {
 	background: dimgray;
+	font-size: 1.25em;
 	padding: 0;
 	/*flex: 1 100%;*/
 	top: 0;
 	left: 0;
 	width: 100%;
 }
+
 
 nav ul {
 	/*margin: 0;*/
@@ -61,6 +62,11 @@ nav ul li a {
 	color: white;
 }
 
+nav a:hover {
+	color: tomato;
+	text-decoration: none;
+}
+
 .hidden {
 	visibility: hidden;
 }
@@ -78,7 +84,7 @@ nav ul li a {
 	/*flex-grow: 1;*/
 	/*width: 300px;*/
 	/*margin: auto;*/
-	float: left;
+	/*float: left;*/
 	padding: 1em;
 	background: whitesmoke;
 }
@@ -86,8 +92,13 @@ nav ul li a {
 #add-music {
 	padding: 1em;
 	background: #F0F0F0;
-	width: 300px;
+	/*width: 300px;*/
 	margin: 0 auto;
+}
+
+#add-music label, #add-music button, #add-music div {
+	margin: 1em auto;
+	text-align: center;
 }
 
 #error-message {
@@ -131,8 +142,8 @@ nav ul li a {
 	/*flex-grow: 2;*/
 	/*width: 600px;*/
 	padding: 1em;
-	float: left;
-	margin-left: 1em;
+	/*float: left;*/
+	/*margin-left: 1em;*/
 	/*float: left;
 	padding: 1%;
 	width: 60%;*/
@@ -204,8 +215,7 @@ nav ul li a {
 
 .displayblock {
 	display: block;
-	/*width: 75%;*/
-	margin: .25em 0; 
+	/*margin: .25em 0; */
 }
 
 .results-line {
@@ -237,10 +247,12 @@ button {
 	margin: auto;
 }
 
-@media screen and (max-width: 750px), screen and (max-device-width: 700px) {
+.test {
+	background: blue;
+}
+
+/*@media screen and (max-width: 750px), screen and (max-device-width: 700px) {
 	#song-options-div {
-		/*padding: 1em 4em;*/
-		/*width: 100%;*/
 		box-sizing: border-box;
 		margin: 0 1em;
 		float: none;
@@ -269,11 +281,11 @@ button {
 
 	#add-music {
 		font-size: 3em;
-		width: auto;
+		/*width: auto;
 		margin: 0 1em;
 	}
 
 	.delete {
 		font-size: .75em;
 	}
-}
+}*/
