some buttons aren't working how i'd like them to so i need to fix more and X

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,10 +26,11 @@ nav {
 	top: 0;
 	left: 0;
 	width: 100%;
+	margin-bottom: 1em;
 
 	ul {
 		padding: 0 1em 0 1em;
-		margin-bottom: 1em;
+		// margin-bottom: 1em;
 
 		li {
 			list-style-type: none;
