--- a/styles/main.css
+++ b/styles/main.css
@@ -9,10 +9,10 @@ nav {
   padding: 0;
   top: 0;
   left: 0;
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 1em; }
   nav ul {
-    padding: 0 1em 0 1em;
-    margin-bottom: 1em; }
+    padding: 0 1em 0 1em; }
     nav ul li {
       list-style-type: none;
       display: inline;
