--- a/sass/main.scss
+++ b/sass/main.scss
@@ -161,12 +161,14 @@ nav {
 
 .delete {
 	margin-left: 1em;
-	font-size: .5em;
+	font-size: .75em;
 	background: $bg-color;
 	color: red;
 	border: 1px solid red;
 	text-align: center;
-	vertical-align: top;
+	vertical-align: middle;
+  width: 2em;
+  height: 2em;
 }
 
 .more {
