--- a/styles/main.css
+++ b/styles/main.css
@@ -107,12 +107,14 @@ nav {
 
 .delete {
   margin-left: 1em;
-  font-size: .5em;
+  font-size: .75em;
   background: whitesmoke;
   color: red;
   border: 1px solid red;
   text-align: center;
-  vertical-align: top; }
+  vertical-align: middle;
+  width: 2em;
+  height: 2em; }
 
 .more {
   background: whitesmoke;
