--- a/styles/main.css
+++ b/styles/main.css
@@ -114,7 +114,8 @@ nav {
   text-align: center;
   vertical-align: middle;
   width: 2em;
-  height: 2em; }
+  height: 2em;
+  line-height: .75em; }
 
 .more {
   background: whitesmoke;
