--- a/sass/main.scss
+++ b/sass/main.scss
@@ -166,7 +166,7 @@ nav {
 	color: red;
 	border: 1px solid red;
 	text-align: center;
-	vertical-align: middle;
+	vertical-align: top;
   width: 2em;
   height: 2em;
   line-height: .75em;
