made it so add form won't accept malicious code

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -173,7 +173,7 @@ nav {
 }
 
 .more {
-	background: $bg-color;
+	background: white;
 	color: $accent-color;
 	border: 1px solid $accent-color;
 	font-size: .75em;
