--- a/styles/main.css
+++ b/styles/main.css
@@ -118,7 +118,7 @@ nav {
   line-height: .75em; }
 
 .more {
-  background: whitesmoke;
+  background: white;
   color: tomato;
   border: 1px solid tomato;
   font-size: .75em;
