--- a/styles/main.css
+++ b/styles/main.css
@@ -20,11 +20,14 @@ nav {
       nav ul li a {
         text-decoration: none;
         color: white; }
+      nav ul li a:visited {
+        color: white;
+        text-decoration: none; }
+      nav ul li a:hover {
+        color: tomato;
+        text-decoration: none; }
     nav ul li:not(:last-child) {
       margin-right: .25em; }
-  nav a:hover {
-    color: tomato;
-    text-decoration: none; }
 
 .hidden {
   visibility: hidden; }
