cleaned up some sass, cleaned up some javascript

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -73,17 +73,9 @@ nav {
 	display: none;
 }
 
-/*#songs-and-options {
-	flex: 1 100%;
-	width: 400px;
-} */
-
 #song-options-div {
-	/*flex-grow: 1;*/
-	/*width: 300px;*/
-	/*margin: auto;*/
-	/*float: left;*/
 	padding: 1em;
+	margin: 0 1em;
 	background: $bg-color;
 }
 
@@ -99,12 +91,17 @@ nav {
 
 .add-music-input {
 	background: $bg-color;
-	padding: 0;
-	margin: 0;
+	padding: 1em;
+	margin: 0 1em;
 }
 
-#add-music label, #add-music button {
-	margin: 1em auto;
+#add-music button {
+	margin: 0 auto;
+	text-align: center;
+}
+
+#add-music label {
+	margin-bottom: 1em;
 	text-align: center;
 }
 
@@ -127,15 +124,10 @@ nav {
 	margin: .5em;
 }
 
-/*.submit {
-	font-size: 2em;
-	margin: 2.5em 0 0; 
-	color: black;
-}*/
-
 #results {
 	background: $bg-color;
 	padding: 1em;
+	margin: 0 1em;
 }
 
 .song-result {
