--- a/templates/songs.hbs
+++ b/templates/songs.hbs
@@ -1,7 +1,7 @@
 	{{#each songs}}
 	<div class="song-result">
 		<p class="song-name">{{title}}</p>
-		<span class="results-line">{{artist}}<span class="results-divider">|</span>{{artist}}</span>
+		<span class="results-line">{{artist}}<span class="results-divider">|</span>{{album}}</span>
 		<button class="delete">&times</button>
 	</div>
 	{{/each}}
