resolved issue with add form showing up for a split second on page load

--- a/styles/main.css
+++ b/styles/main.css
@@ -169,6 +169,9 @@ button {
   text-align: center;
   font-weight: lighter; }
 
+.red {
+  background: red; }
+
 /*@media screen and (max-width: 750px), screen and (max-device-width: 700px) {
 	#song-options-div {
 		box-sizing: border-box;
