--- a/sass/main.scss
+++ b/sass/main.scss
@@ -244,6 +244,10 @@ button {
 	font-weight: lighter;
 }
 
+.red {
+	background: red;
+}
+
 /*@media screen and (max-width: 750px), screen and (max-device-width: 700px) {
 	#song-options-div {
 		box-sizing: border-box;
