--- a/sass/main.scss
+++ b/sass/main.scss
@@ -75,8 +75,8 @@ nav {
 
 #song-options-div {
 	padding: 1em;
-	margin: 0 1em;
-	background: $bg-color;
+	// margin: 0 1em;
+	background: $body-color;
 }
 
 // #add-music {
@@ -90,7 +90,7 @@ nav {
 }
 
 .add-music-input {
-	background: $bg-color;
+	background: $body-color;
 	padding: 1em 0 0 0;
 	margin: 0 1em;
 }
@@ -127,7 +127,7 @@ nav {
 #results {
 	background: $bg-color;
 	padding: 1em;
-	margin: 0 1em;
+	// margin: 0 1em;
 }
 
 .song-result {
@@ -174,11 +174,11 @@ nav {
   line-height: .75em;
 }
 
-.more {
+.more, .filter {
 	background: $body-color;
 	color: $accent-color;
 	border: 1px solid $accent-color;
-	font-size: .75em;
+	font-size: 1em;
 	outline-color: $accent-color;
 }
 
@@ -195,6 +195,10 @@ label {
 .smaller-margin input[type=checkbox] {
 	margin-right: .25em;
 	vertical-align: top;
+}
+
+#song-options-div label:last-child {
+	margin-bottom: .5em;
 }
 
 .displayblock {
@@ -244,9 +248,6 @@ button {
 	font-weight: lighter;
 }
 
-.red {
-	background: red;
-}
 
 /*@media screen and (max-width: 750px), screen and (max-device-width: 700px) {
 	#song-options-div {
