--- a/sass/main.scss
+++ b/sass/main.scss
@@ -129,6 +129,26 @@ nav {
 	color: $accent-color;
 }
 
+.a-dropdown {
+	background: $body-color;
+	color: $accent-color;
+	border: 1px solid $accent-color;
+	font-size: 1em;
+	outline-color: $accent-color;
+	border-radius: 0;
+	margin-bottom: 1em;
+}
+
+.a-dropdown:focus, .a-dropdown:hover {
+	background: $accent-color;
+	color: $body-color;
+	border: 1px solid $body-color;
+	outline-color: $body-color;
+}
+
+
+
+
 #genre-title {
 	margin: .5em;
 }
