--- a/styles/main.css
+++ b/styles/main.css
@@ -90,6 +90,21 @@ nav {
   border: 1px solid white;
   outline-color: white; }
 
+#clearfilter {
+  background: white;
+  color: deepskyblue;
+  border: 1px solid deepskyblue;
+  font-size: 1em;
+  outline-color: deepskyblue;
+  border-radius: 0; }
+
+#filter:hover {
+  background: deepskyblue;
+  color: white;
+  border: 1px solid white;
+  font-size: 1em;
+  outline-color: white; }
+
 #genre-title {
   margin: .5em; }
 
