cleaning up commented code

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -156,7 +156,7 @@ nav {
 	border-radius: 0;
 }
 
-#filter:hover {
+#clearfilter:hover {
 	background: $alt-color;
 	color: $body-color;
 	border: 1px solid $body-color;
